--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
     <footer class="footer">
       <div class="container">
-        <div class="footer__content--line"></div>
+        <!-- <div class="footer__content--line"></div> -->
         <div class="footer__content">
           <a href="#" class="logo">
             <img src="img/logo.png" alt="VideoProduction" class="logo__img">
