--- a/services.html
+++ b/services.html
@@ -39,12 +39,15 @@
             </nav>
             <address class="contacts">
               <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
-              <a href="#" class="contacts__workhours"> График работы</a>
+              <div class="contacts__workhours">
+              <a href="#" class="contacts__link"> График работы</a>
               <div class="contacts__workhours-tooltip">
-                <p> <b>пн-вс: 09:00 - 20:00 </b></p>
-                <p>Обед: 14:00-14:30</p>
+                <ul class="contacts__list">
+                <li class="contacts__item"> <b>пн-вс: 09:00 - 20:00 </b></li>
+                <li class="contacts__item">Обед: 14:00-14:30</li>
+              </ul>
               </div>
-
+            </div>
             </address>
           </div>
         </header>
