--- a/welcome.html
+++ b/welcome.html
@@ -12,14 +12,14 @@
   <div class="welcome">
     
     <div class="welcome__container">
-      <!-- <div class="welcome__record"> -->
+      <div class="welcome__record">
         <div class="welcome__center welcome__center--video">
           
           <img src="/img/welcome/лого.png" alt="" class="welcome__logo">
-          <a href="" class="button button--primary">Войти</a>
+          <a href="/index.html" class="button button--primary">Войти</a>
         </div>
-        </div>
-    <!-- </div> -->
+      </div>
+      </div>
   </div>
 </body>
 </html>
