--- a/reviews.html
+++ b/reviews.html
@@ -17,8 +17,8 @@
       <div class="header-services__wrapper">
         <div class="container">
 
-          <header class="header ">
-            <div class="header-content header-content--services">
+          <header class="header header--small ">
+            <div class="header-content ">
 
             <a href="/index.html" class="logo">
               <img src="img/logo.png" alt="VideoProduction" class="logo__img">
@@ -97,29 +97,7 @@
 </div>
 </div>
 </li>
-<li class="reviews__item review">
-  <div class="review__header">
-    <div class="review__img">
-    <img src="/img/reviews/ekaterina.jpg" alt="" class="review__pic">
-  </div>
-  <div class="review__header-right">
-    <a href="" class="review__name">Екатерина Жмых</a>
-  
-  <div class="reviews__tags">
-    <p class="review__tag tag tag--bg--red">Студийная сьемка</p>
-  </div>
-</div>
-  </div>
-  <div class="review__content">
-<h3 class="review__title">Очень понравилась работа в студии.</h3>
-<div>
-<p class="review__text">Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей. Текст генерируется абзацами случайным образом от двух до десяти предложений в абзаце, что позволяет сделать текст более привлекательным и живым для визуально-слухового восприятия. </p>
-</div>
-<div>
-<p class="review__data">Ноябрь 2019</p>  
-</div>
-</div>
-</li>
+
 
 <li class="reviews__item review">
   <div class="review__header">
@@ -144,6 +122,30 @@
 <p class="review__data">Ноябрь 2019</p>  
 </div>
 </div>
+
+<li class="reviews__item review">
+  <div class="review__header">
+    <div class="review__img">
+    <img src="/img/reviews/ekaterina.jpg" alt="" class="review__pic">
+  </div>
+  <div class="review__header-right">
+    <a href="" class="review__name">Екатерина Жмых</a>
+  
+  <div class="reviews__tags">
+    <p class="review__tag tag tag--bg--red">Студийная сьемка</p>
+  </div>
+</div>
+  </div>
+  <div class="review__content">
+<h3 class="review__title">Очень понравилась работа в студии.</h3>
+<div>
+<p class="review__text">Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей. Текст генерируется абзацами случайным образом от двух до десяти предложений в абзаце, что позволяет сделать текст более привлекательным и живым для визуально-слухового восприятия. </p>
+</div>
+<div>
+<p class="review__data">Ноябрь 2019</p>  
+</div>
+</div>
+</li>
 
 </li>
 <li class="reviews__item review">
@@ -261,8 +263,8 @@
 </div>
 </div>
 <div class="form__buttons">
-  <button type="reset" class="button form__button button--color--grey">Очистить</button>
-  <button type="submit"class="button form__button button--color--red">Отправить</button>
+  <button type="reset" class="button form__button button--color--grey button--form">Очистить</button>
+  <button type="submit"class="button form__button button--color--red button-form">Отправить</button>
 </div>
 
 
