--- a/services.html
+++ b/services.html
@@ -18,8 +18,8 @@
       <div class="header-services__wrapper">
         <div class="container">
 
-          <header class="header ">
-            <div class="header-content header-content--services">
+          <header class="header header--small">
+            <div class="header-content ">
 
             <a href="/index.html" class="logo">
               <img src="img/logo.png" alt="VideoProduction" class="logo__img">
