--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <title>Главная | Video Production</title>
 
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="/css/main.css">
 </head>
 
 <body>
