--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
               <nav class="menu">
                 <ul class="menu__list">
                   <li class="menu__item">
-                    <a href="index.html" class="menu__link">Главная</a>
+                    <a href="./index.html" class="menu__link">Главная</a>
                   </li>
                   <li class="menu__item">
-                    <a href="services.html" class="menu__link">Услуги</a>
+                    <a href="./services.html" class="menu__link">Услуги</a>
                   </li>
                   <li class="menu__item">
-                    <a href="reviews.html" class="menu__link">Отзывы</a>
+                    <a href="./reviews.html" class="menu__link">Отзывы</a>
                   </li>
                 </ul>
               </nav>
