--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <header class="header">
           <div class="container">
             <div class="header-content">
-              <a href="index.html" class="logo">
+              <a href="./index.html" class="logo">
                 <img src="img/logo.png" alt="VideoProduction" class="logo__img">
               </a>
               <nav class="menu">
@@ -194,19 +194,19 @@
     <footer class="footer ">
       <div class="container">
         <div class="footer__content footer__content--index">
-          <a href="index.html" class="logo">
+          <a href="./index.html" class="logo">
             <img src="img/logo.png" alt="VideoProduction" class="logo__img">
           </a>
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__item">
-                <a href="index.html" class="menu__link">Главная</a>
+                <a href=",/index.html" class="menu__link">Главная</a>
               </li>
               <li class="menu__item">
-                <a href="services.html" class="menu__link">Услуги</a>
+                <a href="./services.html" class="menu__link">Услуги</a>
               </li>
               <li class="menu__item">
-                <a href="reviews.html" class="menu__link">Отзывы</a>
+                <a href="./reviews.html" class="menu__link">Отзывы</a>
               </li>
             </ul>
           </nav>
