--- a/reviews.html
+++ b/reviews.html
@@ -20,19 +20,19 @@
           <header class="header header--small ">
             <div class="header-content ">
 
-            <a href="/index.html" class="logo">
+            <a href="./index.html" class="logo">
               <img src="img/logo.png" alt="VideoProduction" class="logo__img">
             </a>
             <nav class="menu">
               <ul class="menu__list">
                 <li class="menu__item">
-                  <a href="/index.html" class="menu__link">Главная</a>
+                  <a href="./index.html" class="menu__link">Главная</a>
                 </li>
                 <li class="menu__item">
-                  <a href="/services.html" class="menu__link">Услуги</a>
+                  <a href="./services.html" class="menu__link">Услуги</a>
                 </li>
                 <li class="menu__item">
-                  <a href="/reviews.html" class="menu__link">Отзывы</a>
+                  <a href="./reviews.html" class="menu__link">Отзывы</a>
                 </li>
               </ul>
             </nav>
@@ -58,10 +58,10 @@
               <nav class="header_services__breadcrumbs">
                 <ul class="header_services__list">
                   <li class="header_services__item">
-                    <a href="/index.html" class="header_services__link">Главная</a>
+                    <a href="./index.html" class="header_services__link">Главная</a>
                   </li>
                   <li class="header_services__item">
-                    <a href="/services.html" class="header_services__link header_services__link--active">Услуги</a>
+                    <a href="./services.html" class="header_services__link header_services__link--active">Услуги</a>
                   </li>
                 </ul>
               </nav>
@@ -287,13 +287,13 @@
           <nav class="menu--footer">
             <ul class="menu__list">
               <li class="menu__item">
-                <a href="/index.html" class="menu__link">Главная</a>
+                <a href="./index.html" class="menu__link">Главная</a>
               </li>
               <li class="menu__item">
-                <a href="/services.html" class="menu__link">Услуги</a>
+                <a href="./services.html" class="menu__link">Услуги</a>
               </li>
               <li class="menu__item">
-                <a href="/reviews.html" class="menu__link">Отзывы</a>
+                <a href="./reviews.html" class="menu__link">Отзывы</a>
               </li>
             </ul>
           </nav>
