--- a/services.html
+++ b/services.html
@@ -27,13 +27,13 @@
             <nav class="menu">
               <ul class="menu__list">
                 <li class="menu__item">
-                  <a href="/index.html" class="menu__link">Главная</a>
+                  <a href="./index.html" class="menu__link">Главная</a>
                 </li>
                 <li class="menu__item">
-                  <a href="/services.html" class="menu__link">Услуги</a>
+                  <a href="./services.html" class="menu__link">Услуги</a>
                 </li>
                 <li class="menu__item">
-                  <a href="/reviews.html" class="menu__link">Отзывы</a>
+                  <a href="./reviews.html" class="menu__link">Отзывы</a>
                 </li>
               </ul>
             </nav>
@@ -58,10 +58,10 @@
               <nav class="header_services__breadcrumbs">
                 <ul class="header_services__list">
                   <li class="header_services__item">
-                    <a href="/index.html" class="header_services__link">Главная</a>
+                    <a href="./index.html" class="header_services__link">Главная</a>
                   </li>
                   <li class="header_services__item">
-                    <a href="/services.html" class="header_services__link header_services__link--active">Услуги</a>
+                    <a href="./services.html" class="header_services__link header_services__link--active">Услуги</a>
                   </li>
                 </ul>
               </nav>
@@ -131,22 +131,22 @@
               <ul class="partners-list">
                 <li class="partners-list__item">
                   <a href="#" class="partners-list__link">
-                    <img src="/img/img.services/divico.png" alt="" >
+                    <img src="./img/img.services/divico.png" alt="" >
                   </a>
                 </li>
                 <li class="partners-list__item">
                   <a href="#" class="partners-list__link">
-                    <img src="/img/img.services/ds.png" alt="" >
+                    <img src="./img/img.services/ds.png" alt="" >
                   </a>
                 </li>
                 <li class="partners-list__item ">
                   <a href="#" class="partners-list__link">
-                    <img src="/img/img.services/park.png" alt="">
+                    <img src="./img/img.services/park.png" alt="">
                   </a>
                 </li>
                 <li class="partners-list__item ">
                   <a href="#" class="partners-list__link">
-                    <img src="/img/img.services/zvibes.png" alt=""> 
+                    <img src="./img/img.services/zvibes.png" alt=""> 
                   </a>
                 </li>
                 <li class="partners-list__item ">
@@ -183,19 +183,19 @@
 
       <div class="footer__content ">
 
-        <a href="/index.html" class="logo">
+        <a href="./index.html" class="logo">
           <img src="img/logo.png" alt="VideoProduction" class="logo__img">
         </a>
         <nav class="menu--footer">
           <ul class="menu__list">
             <li class="menu__item">
-              <a href="/index.html" class="menu__link">Главная</a>
+              <a href="./index.html" class="menu__link">Главная</a>
             </li>
             <li class="menu__item">
-              <a href="/services.html" class="menu__link">Услуги</a>
+              <a href="./services.html" class="menu__link">Услуги</a>
             </li>
             <li class="menu__item">
-              <a href="/reviews.html" class="menu__link">Отзывы</a>
+              <a href="./reviews.html" class="menu__link">Отзывы</a>
             </li>
           </ul>
         </nav>
