--- a/welcome.html
+++ b/welcome.html
@@ -15,8 +15,8 @@
       <div class="welcome__record">
         <div class="welcome__center welcome__center--video">
           
-          <img src="/img/welcome/лого.png" alt="" class="welcome__logo">
-          <a href="/index.html" class="button button--primary">Войти</a>
+          <img src="./img/welcome/лого.png" alt="" class="welcome__logo">
+          <a href="./index.html" class="button button--primary">Войти</a>
         </div>
       </div>
       </div>
