--- a/services.html
+++ b/services.html
@@ -151,22 +151,22 @@
                 </li>
                 <li class="partners-list__item ">
                   <a href="#" class="partners-list__link">
-                    <img src="/img/img.services/rosvideo.png" alt="">
+                    <img src="./img/img.services/rosvideo.png" alt="">
                   </a>
                 </li>
                 <li class="partners-list__item ">
                   <a href="#" class="partners-list__link">
-                    <img src="/img/img.services/zavod.png" alt="">
+                    <img src="./img/img.services/zavod.png" alt="">
                   </a>
                 </li>
                 <li class="partners-list__item ">
                   <a href="#" class="partners-list__link">
-                    <img src="/img/img.services/pixel.png" alt="">
+                    <img src="./img/img.services/pixel.png" alt="">
                   </a>
                 </li>
                 <li class="partners-list__item ">
                   <a href="#" class="partners-list__link">
-                    <img src="/img/img.services/expotv.png" alt="" class="partners-list__item--icon--ex">
+                    <img src="./img/img.services/expotv.png" alt="" class="partners-list__item--icon--ex">
                   </a>
                 </li>
               </ul>
