--- a/reviews.html
+++ b/reviews.html
@@ -76,7 +76,7 @@
 <li class="reviews__item review">
   <div class="review__header">
     <div class="review__img">
-    <img src="/img/reviews/ivan.jpg" alt="" class="review__pic">
+    <img src="./img/reviews/ivan.jpg" alt="" class="review__pic">
   </div>
   <div class="review__header-right">
     
@@ -102,7 +102,7 @@
 <li class="reviews__item review">
   <div class="review__header">
     <div class="review__img">
-    <img src="/img/reviews/liza.jpg" alt="" class="review__pic">
+    <img src="./img/reviews/liza.jpg" alt="" class="review__pic">
   </div>
   <div class="review__header-right">
     <a href="" class="review__name">Лиза Сидорова</a>
@@ -126,7 +126,7 @@
 <li class="reviews__item review">
   <div class="review__header">
     <div class="review__img">
-    <img src="/img/reviews/ekaterina.jpg" alt="" class="review__pic">
+    <img src="./img/reviews/ekaterina.jpg" alt="" class="review__pic">
   </div>
   <div class="review__header-right">
     <a href="" class="review__name">Екатерина Жмых</a>
@@ -151,7 +151,7 @@
 <li class="reviews__item review">
   <div class="review__header">
     <div class="review__img">
-    <img src="/img/reviews/anton.jpg" alt="" class="review__pic">
+    <img src="./img/reviews/anton.jpg" alt="" class="review__pic">
   </div>
   <div class="review__header-right">
     <a href="" class="review__name">Антон Игоревич</a>
