--- a/reviews.html
+++ b/reviews.html
@@ -281,7 +281,7 @@
   
         <div class="footer__content ">
   
-          <a href="/index.html" class="logo">
+          <a href="./index.html" class="logo">
             <img src="img/logo.png" alt="VideoProduction" class="logo__img">
           </a>
           <nav class="menu--footer">
