--- a/services.html
+++ b/services.html
@@ -21,7 +21,7 @@
           <header class="header header--small">
             <div class="header-content ">
 
-            <a href="/index.html" class="logo">
+            <a href="./index.html" class="logo">
               <img src="img/logo.png" alt="VideoProduction" class="logo__img">
             </a>
             <nav class="menu">
